--- a/thesis/tex/tests.tex
+++ b/thesis/tex/tests.tex
@@ -130,7 +130,7 @@ Dodatkowo każde opisane zadanie zostało postawione przed potencjalnymi użytko
 \textbf{Scenariusz testowy:}
   \begin{enumerate}
   
-\item Należy wykonać czynności opisane w podrozdziałach 6.3.1, 6.3.2 oraz 6.3.3.
+\item Należy wykonać czynności opisane w podrozdziałach \ref{subsec:integracja} oraz \ref{subsec:konfiguracja}.
 \item Wybrać domyślny przycisk służący w środowisku \textit{Eclipse} do uruchamiania tworzonego kodu.
 \item W oknie, wybrać plik dziedziny, problemu oraz planistę wraz z algorytmem.
 \item Zatwierdzić przyciskiem \textit{OK}. 
