dodane labele do rozdziałów

--- a/thesis/tex/specification.tex
+++ b/thesis/tex/specification.tex
@@ -1,4 +1,5 @@
 \chapter{Specyfikacja wymagań}
+\label{sec:specyfikacja}
 \section{Wymagania funkcjonalne}
 \JP{Większość z tego co poniżej to nie są w ogóle przypadki użycia, a jeżeli już nawet są to wyglądają bardziej jak wprawki, niż jak fragment pracy dyplomowej. Ten rozdział w zasadzie w całości kwalifikuje się do przepisania. Najlepiej to chyba widać w punkcie "Tworzenie nowego projektu", który przypomina bardziej instrukcję obsługi.}
 \subsection{Kolorowanie składni}
