dodane labele do rozdziałów

--- a/thesis/tex/used-software.tex
+++ b/thesis/tex/used-software.tex
@@ -1,5 +1,7 @@
 \chapter{Wykorzystane oprogramowanie}
+\label{czwarty}
 \section{Eclipse}
+\label{sec:eclipseśrodowisko}
 \subsection{Rys historyczny}
 W 2001 roku pojawił się na rynku mało znany projekt typu \emph{otwarte oprogramowanie} – \emph{Eclipse 1.0}. Program ten został opisany jako ,,zintegrowane środowisko deweloperskie do wszystkiego i do niczego w szególności''\ref{eclipsearticle}. W założeniu nie miał to być kolejny zestaw narzędzi, a w pełni skalowanle i rozszerzalne środowisko programistyczne. Razem z programem, udostępniono szereg narzędzi dla programistów, umożliwiających rozwijanie projektu. Początkowo Eclipse powstał tylko po to, by dowieść, że można zbudować środowisko rozszerzalne w tak dużym zakresie. Dzięki społeczności, bardzo szybko środowisko to rozwinęło się na wiele języków programowania (ponad 1500 narzędzi w \emph{http://marketplace.eclipse.org} na początku stycznia 2014 roku).
 
@@ -47,6 +49,7 @@ Dobrym przykładem jest tutaj całkiem popularne środowisko deweloperskie \emph
 Pojęcie perspektywy jest ważnym elementem środowiska Eclipse. Perspektywy pozwalają na zarządzanie konkretnym układem okien służących do wykonania określonego działania. Każde większe rozszerzenie posiada własną perspektywę, która posiada specyficzne dla danego języka programowania opcje i funkcje. Utworzenie tzw. perspektywy pozwala w środowisku Eclipse na płynne przełączanie między perspektywami dla różnych języków, w zależności od wybranego pakietu podstawowego i rozszerzeń zainstalowanych w Eclipse.
 
 \section{ANTLR}
+\label{sec:antlrśrodowisko}
 ANTLR (ang. \emph{ANother Tool for Language Recognition}) jest generatorem
 analizatorów leksykalnych i składniowych \cite{antlr}.
 
