dodane labele do rozdziałów

--- a/thesis/tex/summary.tex
+++ b/thesis/tex/summary.tex
@@ -1,5 +1,5 @@
 \chapter{Podsumowanie}
-
+\label{sec:podsumowanie}
 W prezentowanej pracy zaprojektowano oraz zaimplementowano graficzne narzędzie do opisu problemów planowania
 w języku \emph{PDDL}.
 Posiada ono funkcjonalność zintegrowanego środowiska programistycznego. Umożliwia tworzenie i zarządzanie
