--- a/thesis/tex/used-software.tex
+++ b/thesis/tex/used-software.tex
@@ -10,7 +10,7 @@ Pierwotnie Eclipse składał się z głównych elementów: \emph{Eclipse Platfor
 Na początku Eclipse było znane jako czysta platforma, dziś jest to zaawansowane środowisko programistyczne z ponad 1500 mniejszymi i większymi rozszerzeniami. W Internecie można znaleźć narzędzia i wtyczki do Eclipse umożliwające pisanie i testowanie kodu niemal w każdym języku programowania.
 
 \subsection{Platforma}
-
+\label{subsec:platforma}
 Program Eclipse zbudowany jest w języku \emph{Java}, wymaga więc zainstalowanej Javy na komputerze użytkownika.  Całe środowisko składa się osobnych wtyczek współpracyjących ze sobą, oraz rdzenia samego programu (ang. \emph{Eclipse kernel}). Wtyczka to nic innego, jak plik \emph{JAR} z manifestem, określającym zachowanie i przeznaczenie modułu. W manifestach zawierane są również informacje na temat zależności między wtyczkami:
 
 Przykład zależności między wtyczkami opisanych w pliku plugin.xml
