--- a/thesis/tex/architecture.tex
+++ b/thesis/tex/architecture.tex
@@ -1,7 +1,7 @@
 \chapter{Architektura systemu}
 \section{Podział na projekty Eclipse}
 
-Opracowany system opiera się na architekturze platformy \emph{Eclipse}, która pozwala na rozszerzanie jej funkcjonalności na podstawie ściśle określonej struktury. Struktura ta opisuje poszczególne elementy, które mogą znaleźć się w tworzonej wtyczce (np. widoki, edytory, obsługa zewnętrznych narzędzi). Dzięki możliwości wstępnej konfiguracji wtyczki za pomocą pliku (rozdzial), praca nad projektem sprowadza się głównie do własnej implementacji tych elementów. 
+Opracowany system opiera się na architekturze platformy \emph{Eclipse}, która pozwala na rozszerzanie jej funkcjonalności na podstawie ściśle określonej struktury. Struktura ta opisuje poszczególne moduły, jakie mogą znaleźć się w tworzonej wtyczce (np. widoki, edytory, obsługa zewnętrznych narzędzi) oraz sposób ich współpracy z pozostałą częścią programu. Aby dodać niedostępną standardowo funkcję, wystarczy rozszerzyć odpowiedni moduł, wykorzystując przy tym zdefiniowane klasy i interfejsy. Taka budowa powoduje, że większość wtyczek posiada takie same elementy składowe, będące w większości własną implementacją standardowych komponentów \emph{Eclipse}.
 
 W przypadku systemu GUI4PDDL są to:
 \begin{itemize}
@@ -19,9 +19,9 @@ Projekty główne:
 \begin{description}
 \item [\texttt{pl.poznan.put.cs.gui4pddl}] Projekt zawierający pełną implementację wtyczki (wersję instalacyjną). Składa się z pakietów odpowiedzialnych za logikę biznesową oraz wszystkie istniejące widoki. Szerszy opis tego projektu znajduje się w rozdziale~\ref{sec:struktura}.
 \item [\texttt{pl.poznan.put.cs.gui4pddl.antlr}] Projekt zawierający bibliotekę \emph{ANTLR Runtime}, niezbędną do działania analizatora składniowego PDDL, wykonanego w narzędziu \emph{ANTLR}\footnote{http://www.antlr.org/}.
-\item [\texttt{pl.poznan.put.cs.gui4pddl.feature}] Projekt \emph{Feature}\footnote{http://help.eclipse.org/juno/topic/org.eclipse.pde.doc.user/concepts/feature.htm?cp=4\_1\_1}, umożliwiający połączenie różnych wtyczek w taki sposób, by z zewnątrz były traktowane jako logiczna całość, co ułatwia zarządzanie nimi. Dodatkowo pozwala na uzupełnienie informacji dotyczących wersji, licencji, obsługiwanych systemów operacyjnych itp. Projekt tego typu wymagany jest także w procesie budowania i aktualizacji. We wtyczce GUI4PDDL grupuje podprojekty \texttt{pl.poznan.put.cs.gui4pddl} oraz \texttt{pl.poznan.put.cs.gui4pddl.antlr}, a także udostępnia podstawowe informacje o niej.
-\item [\texttt{pl.poznan.put.cs.gui4pddl.tests}] Projekt zawierający testy jednostkowe kodu niezwiązanego z interfejsem graficznym (z wykorzystaniem biblioteki \emph{JUnit}\footnote{http://junit.org/}) oraz gramatyki formalnej, generowanej przez narzędzie \emph{ANTLR}, używanej w analizatorze składniowym (z wykorzystaniem biblioteki \emph{gUnit}\footnote{http://www.antlr.org/wiki/display/ANTLR3/gUnit+-+Grammar+Unit+Testing}). Oddzielenie testów od kodu głównego projektu pozwoliło na zmniejszenie wielkości wersji instalacyjnej oraz zredukowanie zależności od dodatkowych bibliotek.
-\item [\texttt{pl.poznan.put.cs.gui4pddl.uitests}] Projekt zawierający testy jednostkowe interfejsu graficznego, z wykorzystaniem biblioteki \emph{SWTBot}\footnote{http://eclipse.org/swtbot/}. Biblioteka ta umożliwia przeprowadzenie automatycznych testów akceptacyjnych GUI, stworzonego przy pomocy biblioteki \emph{SWT}\footnote{http://eclipse.org/swt/}.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.feature}] Projekt \emph{Feature}\footnote{http://help.eclipse.org/juno/topic/org.eclipse.pde.doc.user/concepts/feature.htm?cp=4\_1\_1}, umożliwiający połączenie różnych wtyczek w taki sposób, by z zewnątrz były traktowane jako logiczna całość, co ułatwia zarządzanie nimi. Dodatkowo pozwala na uzupełnienie informacji dotyczących wersji, licencji, obsługiwanych systemów operacyjnych itp. Projekt tego typu wymagany jest także w procesie budowania i aktualizacji. Wykorzystany w niniejszej pracy, grupuje podprojekty \texttt{pl.poznan.put.cs.gui4pddl} oraz \texttt{pl.poznan.put.cs.gui4pddl.antlr}, a także udostępnia podstawowe informacje o narzędziu GUI4PDDL.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.tests}] Projekt zawierający testy jednostkowe kodu niezwiązanego z interfejsem graficznym, wykorzystujące bibliotekę \emph{JUnit}\footnote{http://junit.org/} oraz testy gramatyki formalnej, generowanej przez narzędzie \emph{ANTLR}, wykorzystujące bibliotekę \emph{gUnit}\footnote{http://www.antlr.org/wiki/display/ANTLR3/gUnit+-+Grammar+Unit+Testing}.  Oddzielenie testów od kodu głównego projektu pozwoliło na zmniejszenie wielkości wersji instalacyjnej oraz zredukowanie zależności od dodatkowych bibliotek.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.uitests}] Projekt zawierający testy jednostkowe interfejsu graficznego, wykorzystujące bibliotekę \emph{SWTBot}\footnote{http://eclipse.org/swtbot/}. Biblioteka ta umożliwia przeprowadzenie automatycznych testów akceptacyjnych GUI, stworzonego przy pomocy biblioteki \emph{SWT}\footnote{http://eclipse.org/swt/}.
 \item [\texttt{pl.poznan.put.cs.gui4pddl.update}] Projekt typu \emph{Update site}\footnote{http://help.eclipse.org/juno/topic/org.eclipse.pde.doc.user/concepts/update\_site.htm?cp=4\_1\_6}, zawierający statyczne pliki, które mogą być umieszczone w określonym miejscu na serwerze. Użytkownicy, korzystając z adresu do tego miejsca mogą pobrać i zainstalować wtyczkę poprzez menedżer aktualizacji. Projekt ten korzysta z wcześniej zdefiniowanego projektu \emph{Feature} oraz zawiera opis wtyczki i kategorię, wyświetlone następnie przy instalacji.
 \end{description}
 
@@ -44,10 +44,10 @@ Kod głównego projektu wtyczki GUI4PDDL (\texttt{pl.poznan.put.cs.gui4pddl}) po
 \end{figure}
 
 \begin{description}
-\item [\texttt{pl.poznan.put.cs.gui4pddl}] Podstawowy pakiet projektu, zawierający implementację (klasa \texttt{Activator}) klasy \texttt{Plugin}, którą musi implementować każda wtyczka platformy \emph{Eclipse}. Klasa ta odpowiada za cykl życia (inicjalizacja, zakończenie) projektu. W pakiecie tym znajdują się również współdzielone stałe, definicja natury PDDL (roz. \textbf{ROZDZIAŁ}) oraz klasy pomocnicze, służące do tworzenia nowego projektu i przechowywania obrazów, wykorzystywanych we wtyczce.\JP{Brakuje odnośnika i ja nadal nie wiem co to jest natura PDDL i czy mój PDDL też ją ma;}
+\item [\texttt{pl.poznan.put.cs.gui4pddl}] Podstawowy pakiet projektu, zawierający implementację (klasa \texttt{Activator}) klasy \texttt{Plugin}, którą musi implementować każda wtyczka platformy \emph{Eclipse}. Klasa ta odpowiada za cykl życia (inicjalizacja, zakończenie) projektu. W pakiecie tym znajdują się również współdzielone stałe oraz klasy pomocnicze, służące do tworzenia nowego projektu i przechowywania obrazów, wykorzystywanych we wtyczce.
 \item [\texttt{pl.poznan.put.cs.gui4pddl.codecompletion}] Pakiet zawierający klasy odpowiedzialne za zarządzanie podpowiadaniem składni, w tym za tworzenie prawidłowych propozycji uzupełniania kodu.
 \item [\texttt{pl.poznan.put.cs.gui4pddl.codemodel}] Pakiet zawierający klasy wchodzące w skład indeksu kodu (roz~\ref{subsec:indeks}), czyli modelu struktur PDDL. Znajdują się tam klasy reprezentujące m.in. akcje, predykaty, problemy i dziedziny.
-\item [\texttt{pl.poznan.put.cs.gui4pddl.editor}] Pakiet zawierający implementację edytora tekstowego oraz wszystkich jego funkcjonalności: kolorowania i podpowiadania składni, dopasowywania nawiasów, automatycznych wcięć.
+\item [\texttt{pl.poznan.put.cs.gui4pddl.editor}] Pakiet zawierający implementację edytora tekstowego oraz wszystkich jego funkcji: kolorowania i podpowiadania składni, dopasowywania nawiasów, automatycznych wcięć.
 \begin{itemize}
 \item \texttt{\textbf{pl.poznan.put.cs.gui4pddl.editor.scanners}} Pakiet zawierający detektory słów kluczowych oraz elementów składniowych języka, które są wykorzystywane na etapie kolorowania i podpowiadania składni.
 \end{itemize}
