[247] ipc sentence fix

--- a/thesis/tex/implementation.tex
+++ b/thesis/tex/implementation.tex
@@ -397,7 +397,7 @@ W przypadku języka PDDL, wykorzystywanego w niniejszej pracy, instancja problem
 
 \subsection{Integracja zewnętrznego oprogramowania z wtyczką}
 \label{subsec:integracja}
-Obecnie dostępnych jest wiele planerów, korzystających z języka PDDL, różniących się dostępnymi algorytmami, sposobem uruchamiania, liczbą oraz rodzajem przyjmowanych na wejściu argumentów, a także strukturą strumienia wyjściowego. Ze względu na to, że programy wyznaczające plan tworzone są często z przeznaczeniem na konkurs IPC (\emph{International Planning Competition}), dotychczas nie zdefiniowano standardu uruchamiania tego typu narzędzi, który obejmowałby m.in. ujednolicenie argumentów linii poleceń oraz dodatkowych, wykorzystywanych komend powłoki, często specyficznych dla systemu operacyjnego.
+Obecnie dostępnych jest wiele planerów, korzystających z języka PDDL, różniących się dostępnymi algorytmami, sposobem uruchamiania, liczbą oraz rodzajem przyjmowanych na wejściu argumentów, a także strukturą strumienia wyjściowego. Narzędzia te tworzone są często w celach porównawczych np. w konkursie IPC\footnote{http://ipc.icaps-conference.org/}(\emph{International Planning Competition}) lub naukowych, dlatego twórcy nie przywiązują wagi do kwestii integracji ze środowiskami programistyczymi. Nie zdefiniowano więc dotychczas standardu uruchamiania tego typu oprogramowania, który obejmowałby m.in. ujednolicenie argumentów linii poleceń oraz dodatkowych, wykorzystywanych komend powłoki, często specyficznych dla systemu operacyjnego.
 
 Analiza przykładowych narzędzi (\emph{FastDownward}\footnote{http://www.fast-downward.org/} , \emph{SatPlan}\footnote{http://www.cs.rochester.edu/users/faculty/kautz/satplan/}, \emph{FastForward}\footnote{http://fai.cs.uni-saarland.de/hoffmann/ff.html}) pod kątem inicjalizacji procesu planowania pozwoliła zidentyfikować cechy wspólne oraz różnice pomiędzy planerami, opisane w tabeli \ref{plannersTable}.
 \begin{table}[h]
